--- a/public/index.html
+++ b/public/index.html
@@ -9,24 +9,28 @@
     <body>
         <div class="loader"></div>
         <div class="wrapper">
-            <div class="logo"></div>
-            <p class="unique">UNIQUE</p>
-            <p class="personal">PERSONAL TRAINING</p>
-            <div id="countdown"></div>
-            <form id="form">
-                <input type="email" required class="email" placeholder="Email">
-                <button type="submit">NOTIFY ME</button>
-            </form>
-            <ul>
-                <li><a class="icon-paper-plane" href=""></a></li>
-                <li><a class="icon-old-mobile" href=""></a></li>
-                <li><a class="icon-instagram" href=""></a></li>
-                <li><a class="icon-facebook" href=""></a></li>
-                <li><a class="icon-youtube" href=""></a></li>
-                <li><a class="icon-skype" href=""></a></li>
-                <li><a class="icon-spotify" href=""></a></li>
-            </ul>
-            <p class="copy">&copy; 2013-2015 UNIQUE PERSONAL TRAINING</p>
+        	<div class="logo_wrapper">
+            	<div class="logo"></div>
+            	<p class="unique">UNIQUE</p>
+            	<p class="personal">PERSONAL TRAINING</p>
+            </div>
+            <div class="content_wrapper">
+				<div id="countdown"></div>
+				<form id="form">
+				    <input type="email" required class="email" placeholder="Email">
+				    <button type="submit">NOTIFY ME</button>
+				</form>
+				<ul>
+				    <li><a class="icon-paper-plane" href=""></a></li>
+				    <li><a class="icon-old-mobile" href=""></a></li>
+				    <li><a class="icon-instagram" href=""></a></li>
+				    <li><a class="icon-facebook" href=""></a></li>
+				    <li><a class="icon-youtube" href=""></a></li>
+				    <li><a class="icon-skype" href=""></a></li>
+				    <li><a class="icon-spotify" href=""></a></li>
+				</ul>
+				<p class="copy">&copy; 2013-2015 UNIQUE PERSONAL TRAINING</p>
+			</div>
         </div>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script type="text/javascript" src="js/plugins.js"></script>
