--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>UNIQUE PERSONAL TRAINING</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="//use.typekit.net/ekd6xqw.js"></script>
         <script>try{Typekit.load();}catch(e){}</script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -21,15 +22,13 @@
 				    <button type="submit">NOTIFY ME</button>
 				</form>
 				<ul>
-				    <li><a class="icon-paper-plane" href=""></a></li>
-				    <li><a class="icon-old-mobile" href=""></a></li>
-				    <li><a class="icon-instagram" href=""></a></li>
-				    <li><a class="icon-facebook" href=""></a></li>
-				    <li><a class="icon-youtube" href=""></a></li>
-				    <li><a class="icon-skype" href=""></a></li>
-				    <li><a class="icon-spotify" href=""></a></li>
+				    <li><a class="icon-paper-plane" href="mailto:lovelock@uniquept.de"></a></li>
+				    <li><a class="icon-old-mobile" href="tel:+4917635918966"></a></li>
+				    <li><a class="icon-instagram" target="_blank" href="http://instagram.com/leon_lovelock"></a></li>
+				    <li><a class="icon-facebook" target="_blank" href="https://www.facebook.com/LovelockAesthetic/"></a></li>
+				    <li><a class="icon-youtube" target="_blank" href="https://www.youtube.com/channel/UCtQFxktythX5mGgZm0Pag2Q"></a></li>
 				</ul>
-				<p class="copy">&copy; 2013-2015 UNIQUE PERSONAL TRAINING</p>
+				<p class="copy">&copy; 2013-2015 LEON LOVELOCK - UNIQUE PERSONAL TRAINING</p>
 			</div>
         </div>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
